Fixed statements horizontal scrolling

--- a/app/static/css/problem.css
+++ b/app/static/css/problem.css
@@ -76,7 +76,7 @@
 
 #statementsContentScrollable {
     padding: 20px;
-    overflow-y: auto;
+    overflow: auto;
 }
 
 #statementsLoading {
